# poomer

./: LICENSE  README.md  flake.nix  pyproject.toml
src/poomer/: __init__.py  __main__.py  app.py  config.py  navigation.py
src/poomer/shaders/: __init__.py  vert.glsl
